--- a/housing/index.html
+++ b/housing/index.html
@@ -33,6 +33,7 @@
         // Housing data from CSV
         const housingData = {
             0: "Neviriah",
+            4: "Ahmelya"
             6: "Elvor",
             7: "GasLightatdawn",
             8: "Koren",
